--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Responsive Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./contact.css" />
+    <link rel="stylesheet" href="./portfolio.css" />
+    <link rel="stylesheet" href="./global.css" />
+  </head>
+  <header class="primary-header">
+    <h1 class="logo">
+      Cody Walter
+      <!-- <a href="index.html">Cody Walter</a> -->
+    </h1>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link active" href="index.html">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contact</a>
+      </li>
+    </ul>
+  </header>
+  <body>
+    <div class="container">
+      <div class="row" class="about-me-row">
+        <div class="column">
+          <h1 class="about-me-header">About Me</h1>
+        </div>
+        <hr class="about-me-line" />
+      </div>
+      <div class="row">
+        <div class="column">
+          <img class="img-me" src="assets/IMG_0734.jpeg" alt="picture of me" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam,
+            quasi voluptatum, labore accusamus hic cumque ex cum soluta veniam
+            ab rem voluptates iusto odit dolores, non vel unde minus neque
+            nostrum esse! Facilis, pariatur labore nostrum dolorum cum,
+            excepturi aliquam officiis nulla odio voluptates cumque laboriosam.
+            Quae repellendus error dolorum laudantium debitis officia est omnis
+            hic. Quam dolores doloremque illum reiciendis corporis corrupti
+            repellat esse, voluptatem vel dicta optio excepturi facere
+            consequatur tempora debitis officiis quisquam ipsa est reprehenderit
+            autem quae iste laboriosam. Similique quod est minus. Nemo qui
+            repellat, animi beatae adipisci pariatur tempore et fugiat tempora
+            nam, aperiam voluptatem earum omnis? Ex maiores est facilis a
+            aliquid, consequuntur, illum necessitatibus quas omnis voluptatum at
+            tempora atque similique nisi magnam commodi magni! Voluptatibus quo
+            sit magni vero dolorem, dolore ab. Ut doloremque eius necessitatibus
+            dolor voluptas suscipit fugit, asperiores veniam quo error, quas
+            fuga laborum nulla optio cum quam?
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
+  <footer class="primary-footer">
+    &copy; Copyright
+  </footer>
+</html>
