added more styling to responsive page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,52 @@
       </li>
     </ul>
   </header>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="portfolio-header">Portfolio</h1>
+        </div>
+        <hr class="portfolio-line" />
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/300x200" />
+          </a>
+        </div>
+        <div class="col-6">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/300x200" />
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/300x200" />
+          </a>
+        </div>
+        <div class="col-6">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/300x200" />
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/300x200" />
+          </a>
+        </div>
+        <div class="col-6">
+          <a href="https://placeholder.com"
+            ><img src="https://via.placeholder.com/300x200" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
   <footer class="primary-footer">
     &copy; Copyright
   </footer>
