--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,12 @@
     </ul>
   </header>
   <body>
-    <div class="container">
+    <div class="container" class="contact-container">
       <div class="row">
         <div class="column">
-          <h1>Contact</h1>
+          <h1 class="contact-header">Contact</h1>
         </div>
-        <hr class="about-me-line" />
+        <hr class="contact-line" />
       </div>
       <form>
         <div class="form-group">
