--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <header class="primary-header">
     <h1 class="logo">
       Cody Walter
-      <!-- <a href="index.html">Cody Walter</a> -->
     </h1>
     <ul class="nav justify-content-end">
       <li class="nav-item">
@@ -31,6 +30,10 @@
         <a class="nav-link" href="contact.html">Contact</a>
       </li>
     </ul>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </header>
   <body>
     <div class="container">
